test/compile-fail/fn__empty.he
fn blah: &str //~ ERROR 3016 Typed function cannot be empty
{
}
